Updated download URLs

--- a/index.html
+++ b/index.html
@@ -60,8 +60,10 @@
 <h1>Downloads</h1>
 <table class = "table-files">
 <tr><th>File name</th><th>Description</td><th>Size</th></tr>
-<tr><td><a href="download.php">phpHotMap-1.0.zip</a></td>
-<td>phpHotMap library and examples</td><td>18.5 Kb</td></tr>
+<tr><td><a href="https://github.com/pragres/phphotmap/archive/phpHotMap-1.0.zip">phpHotMap-1.0.zip</a></td>
+<td>phpHotMap library and examples (zip)</td><td>18.5 Kb</td></tr>
+<tr><td><a href="https://github.com/pragres/phphotmap/archive/phpHotMap-1.0.tar.gz">phpHotMap-1.0.tar.gz</a></td>
+<td>phpHotMap library and examples (tar.gz)</td><td>15.1 Kb</td></tr>
 </table>
 <span id="license"></span>
 <table><tr><!-- <td>
