--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <title>phpHotMap - PHP Hot Mapping for Javascript</title>
 <link href="styles/phpHotMap.css" type="text/css" rel="stylesheet"/>
 <script src="lib/jquery/jquery.js" type="text/javascript"></script>
-<script src="lib/phpHotMap/phpHotMap.js" type="text/javascript"></script>
-<script src="lib/phpHotMap/example/client.js" type="text/javascript"></script>
+<script src="http://phphotmap.php.pragres.com/phpHotMap.js" type="text/javascript"></script>
+<script src="http://phphotmap.php.pragres.com/example/client.js" type="text/javascript"></script>
 </head>
 <body>
 <div id="background"></div>
